--- a/.mocharc.json
+++ b/.mocharc.json
@@ -2,6 +2,6 @@
     "extension": [
         "ts"
     ],
-    "spec": "tests/genero.spec.ts",
+    "spec": "tests/**/*.spec.ts",
     "require": "ts-node/register"
 }
