--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "mocha",
     "start": "tsc-watch --onSuccess \"node dist/genero.js\"",
-    "doc": "typedoc"
+    "doc": "typedoc",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,11 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.2",
     "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^4.6.0",
     "typedoc": "^0.22.13"
