--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,15 @@
         "./dist"
     ],
     "compilerOptions": {
-        "target": "ES2020",
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "module": "CommonJS",
-        "declaration": true,
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "noImplicitReturns": true
+      "target": "ES2020",
+      "module": "CommonJS",
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "declaration": true,
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "strictPropertyInitialization": true,
+      "noImplicitReturns": true,
+      "sourceMap": true
     }
 }
