--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nyc": "^15.1.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^4.6.0",
-    "typedoc": "^0.22.13"
+    "typedoc": "^0.22.13",
+    "typescript": "^4.6.3"
   }
 }
