--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "mocha",
-    "start": "tsc-watch --onSuccess \"node dist/genero.js\"",
+    "start": "tsc-watch --onSuccess \"node dist/prueba.js\"",
     "doc": "typedoc",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output"
   },
@@ -26,5 +26,8 @@
     "tsc-watch": "^4.6.0",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.2"
   }
 }
