--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
       "valid-jsdoc": "off",
       "prefer-const": "off",
       "no-unused-vars": "off",
-      "max-len": "off"
+      "max-len": "off",
+      "no-case-declarations": "off"
     }
 }
