--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/inquirer": "^8.2.1",
+    "@types/lowdb": "^1.0.11",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
@@ -28,6 +30,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "inquirer": "^8.2.2"
+    "inquirer": "^8.2.2",
+    "lowdb": "^1.0.0"
   }
 }
