--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "mocha",
-    "start": "tsc-watch --onSuccess \"node dist/prueba.js\"",
+    "start": "tsc-watch --onSuccess \"node dist/app.js\"",
     "doc": "typedoc",
     "coverage": "nyc npm test && nyc report --reporter=lcov"
   },
